--- a/talk/REST-in-peace/assets/style.css
+++ b/talk/REST-in-peace/assets/style.css
@@ -2,72 +2,90 @@
 overriding basic theme
  */
 body {
-	font-size: 3em;
+	font-size: 2.5em;
 }
 
 .slide-content {
 	font-size: 0.9em;
 	width: 980px;
-  height:780px;
+	height:780px;
+	margin-top:40px;
 }
 
 h1 {
-  font-size: 2em;
+	font-size: 2em;
 }
 
 h2 {
-  font-size: 1.3em;
+	font-size: 1.3em;
 }
 
 h3 {
-  font-size: 1.2em;
+	font-size: 1.2em;
 
 
 }
 
 ul {
-  line-height: 2em;
+	line-height: 1.8em;
 }
 
+blockquote {
+	padding: 0 15px;
+	color: #777;
+	border-left: 4px solid #ddd;
+	margin: 0px;
+}
+
+table {
+	padding: 0; 
+	border-collapse: collapse;
+	width:100%;
+}
+	table tr {
+		border-top: 1px solid #cccccc;
+		background-color: white;
+		margin: 0;
+		padding: 0; 
+ }
+		table tr:nth-child(2n) {
+			background-color: #f8f8f8; 
+		}
+		table tr th {
+			font-weight: bold;
+			border: 1px solid #cccccc;
+			text-align: left;
+			margin: 0;
+			padding: 10px 17px; 
+		}
+		table tr td {
+			border: 1px solid #cccccc;
+			text-align: left;
+			margin: 0;
+			padding: 10px 17px; 
+		}
+		table tr th :first-child, table tr td :first-child {
+			margin-top: 0; 
+		}
+		table tr th :last-child, table tr td :last-child {
+			margin-bottom: 0; 
+		}
+
 .author h1 {
-  font-size: 1em;
+	font-size: 1em;
 }
 
 .author h3 {
-  font-size: 0.7em;
-}
-
-pre {
-  font-size: 0.7em;
+	font-size: 0.7em;
 }
 
 /*
 Slides
  */
-#slide-3 img   {
-  display:block;
-  margin:auto;
+#slide-8 table {
+	font-size: 0.6em;
 }
 
-#slide-6   {
-  background: url('assets/slide3.jpg');
-  background-size: cover;
-}
-
-#slide-7   {
-  background: url('assets/slide3b.jpg');
-  background-size: cover;
-}
-
-#slide-9   {
-  background: url('assets/slide4.jpg');
-  background-size: cover;
-  color: #eee;
-}
-
-#slide-12 {
-  background: url('assets/giphy.gif');
-  background-position: center center;
-  background-size: cover;
-  color: #eee;
+#slide-9 table {
+	font-size: 0.6em;
 }
