--- a/talk/REST-in-peace/assets/style.css
+++ b/talk/REST-in-peace/assets/style.css
@@ -22,12 +22,18 @@ h2 {
 
 h3 {
 	font-size: 1.2em;
+	margin-bottom: 80px;
+}
 
-
+h4 {
+	font-size: 1.0em;
+	margin-bottom: 0px;
 }
 
 ul {
 	line-height: 1.8em;
+	padding-top:0px;
+	margin:0px;
 }
 
 blockquote {
@@ -87,6 +93,16 @@ pre {
 /*
 Slides
  */
+#slide-9 table {
+	margin-top:30px;
+	font-size: 0.6em;
+}
+
+#slide-12 table {
+	margin-top:30px;
+	font-size: 0.6em;
+}
+
 #slide-13 table {
 	margin-top:30px;
 	font-size: 0.6em;
@@ -97,12 +113,22 @@ Slides
 	font-size: 0.6em;
 }
 
-#slide-15 table {
+#slide-23 table {
 	margin-top:30px;
 	font-size: 0.6em;
 }
 
-#slide-24 table {
+#slide-29 table {
+	margin-top:30px;
+	font-size: 0.6em;
+}
+
+#slide-33 table {
+	margin-top:30px;
+	font-size: 0.6em;
+}
+
+#slide-39 table {
 	margin-top:30px;
 	font-size: 0.6em;
 }
