--- a/talk/REST-in-peace/assets/style.css
+++ b/talk/REST-in-peace/assets/style.css
@@ -5,11 +5,20 @@ body {
 	font-size: 2.5em;
 }
 
+.slide {
+	padding-top: 25px;
+}
+
 .slide-content {
 	font-size: 0.9em;
-	width: 60%;
-	height:780px;
+	font-family: 'Helvetica Neue', Helvetica;
+	width: 70%;
+	/*height:780px;*/
 	margin-top:40px;
+}
+
+.slide-content img{
+	width:auto;
 }
 
 h1 {
@@ -22,7 +31,7 @@ h2 {
 
 h3 {
 	font-size: 1.2em;
-	margin-bottom: 80px;
+	margin-bottom: 40px;
 }
 
 h4 {
@@ -79,7 +88,7 @@ table {
 		}
 
 pre {
-	font-size: 0.8em;
+	font-size: 0.7em;
 }
 
 .author h1 {
@@ -95,27 +104,27 @@ Slides
  */
 #slide-7 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 #slide-10 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 #slide-11 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 #slide-12 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 #slide-21 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 #slide-24 table {
@@ -125,12 +134,12 @@ Slides
 
 #slide-28 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 #slide-35 table {
 	margin-top:30px;
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
 
