--- a/talk/REST-in-peace/assets/style.css
+++ b/talk/REST-in-peace/assets/style.css
@@ -87,16 +87,28 @@ table {
 			margin-bottom: 0; 
 		}
 
+a {
+	color: #47a9ff;
+}
+a:hover {
+	color: #47a9ff;
+	border-bottom: 3px solid #47a9ff;
+}
+
 pre {
 	font-size: 0.7em;
 }
 
 .author h1 {
-	font-size: 1em;
+	font-size: 1.5em;
+	font-weight: bold;
+	font-family: 'Helvetica Neue', Helvetica;
 }
 
 .author h3 {
-	font-size: 0.7em;
+	font-size: 1em;
+	font-family: 'Helvetica Neue', Helvetica;
+	margin-bottom:0;
 }
 
 /*
@@ -145,4 +157,9 @@ Slides
 
 #slide-36 pre {
 	font-size: 0.6em;
+}
+
+
+#slide-39 p {
+	text-align: center;
 }
