refactor: rewrite some slides

--- a/talk/Recruter-vos-developpeurs/assets/style.css
+++ b/talk/Recruter-vos-developpeurs/assets/style.css
@@ -149,7 +149,7 @@ Slides
 }
 
 
-
+/* 
 #slide-14 {
 	background: url('assets/12.jpg');
   	background-size: cover;
@@ -198,7 +198,7 @@ Slides
 #slide-34 {
 	background: url('assets/21.jpg');
   	background-size: cover;
-}
+} */
 
 
 
